--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0410.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0410.html
@@ -202,7 +202,7 @@
         </span>
         <span id="w_36" class="ocr_word" title="bbox 1245 362 1576 417" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">προσλαμβάνων</ins>
+            <ins title="nlp 2.00">(προσλαμβάνων</ins>
           </span>
         </span>
         <span id="w_37" class="ocr_word" title="bbox 1618 362 1690 417" lang="grc">
@@ -621,7 +621,7 @@
         </span>
         <span id="w_117" class="ocr_word" title="bbox 1037 848 1121 901" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καὶ</ins>
+            <ins title="nlp 2.00">(καὶ</ins>
           </span>
         </span>
         <span id="w_118" class="ocr_word" title="bbox 1152 863 1223 902" lang="grc">
@@ -1063,7 +1063,7 @@
         </span>
         <span id="w_203" class="ocr_word" title="bbox 1733 1262 1810 1316" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δὶς</ins>
+            <ins title="nlp 2.00">(δὶς</ins>
           </span>
         </span>
         <span id="w_204" class="ocr_word" title="bbox 1831 1263 1901 1318" lang="grc">
@@ -2106,9 +2106,14 @@
             <del title="nlp 0.90">suppl.</del>
           </span>
         </span>
-        <span id="w_404" class="ocr_word" title="bbox 469 2745 517 2778">
+        <span id="w_404_0" class="ocr_word" title="bbox 469 2745 517 2778">
           <span class="alternatives">
-            <ins title="nlp 2.00">V 2</ins>
+            <ins class="alt" title="nlp 2.00">V2</ins>
+          </span>
+        </span>
+        <span id="w_404_1" class="ocr_word" title="bbox 469 2745 517 2778">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_405" class="ocr_word" title="bbox 662 2746 681 2779">
@@ -2185,12 +2190,6 @@
             <ins class="alt" title="nlp 1.00">ὀκτὰς</ins>
           </span>
         </span>
-        <span id="w_419" class="ocr_word" title="bbox 2084 2746 2112 2779">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">V</ins>
-            <del title="nlp 0.90">V</del>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 331 2803 2158 2853">
         <span id="w_420" class="ocr_word" title="bbox 331 2803 432 2849" lang="grc">
@@ -2205,8 +2204,7 @@
         </span>
         <span id="w_422" class="ocr_word" title="bbox 580 2804 611 2837">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">’</ins>
-            <del title="nlp 0.90">’</del>
+            <ins title="nlp 2.00">V</ins>
           </span>
         </span>
         <span id="w_423" class="ocr_word" title="bbox 807 2804 848 2838">
@@ -2408,20 +2406,19 @@
             <ins class="alt" title="nlp 1.00">οὖν</ins>
           </span>
         </span>
-        <span id="w_460" class="ocr_word" title="bbox 1635 2925 1680 2958">
+        <span id="w_460_0" class="ocr_word" title="bbox 1635 2925 1680 2958">
           <span class="alternatives">
-            <ins title="nlp 2.00">V 2</ins>
+            <ins class="alt" title="nlp 2.00">V2</ins>
+          </span>
+        </span>
+        <span id="w_460_1" class="ocr_word" title="bbox 1635 2925 1680 2958">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_461" class="ocr_word" title="bbox 1872 2921 1974 2960" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">ὀκτὰς</ins>
-          </span>
-        </span>
-        <span id="w_462" class="ocr_word" title="bbox 2000 2924 2030 2956">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">V</ins>
-            <del title="nlp 0.90">V</del>
           </span>
         </span>
       </span>
@@ -2448,9 +2445,14 @@
             <ins class="alt" title="nlp 1.00">ἡ</ins>
           </span>
         </span>
-        <span id="w_467" class="ocr_word" title="bbox 717 2981 759 3016">
+        <span id="w_467_0" class="ocr_word" title="bbox 717 2981 759 3016">
           <span class="alternatives">
-            <ins title="nlp 2.00">V 2</ins>
+            <ins class="alt" title="nlp 2.00">V2</ins>
+          </span>
+        </span>
+        <span id="w_467_1" class="ocr_word" title="bbox 717 2981 759 3016">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_468" class="ocr_word" title="bbox 955 2981 993 3015">
@@ -2471,8 +2473,7 @@
         </span>
         <span id="w_471" class="ocr_word" title="bbox 1235 2984 1281 3017">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">V</ins>
-            <del title="nlp 0.90">V</del>
+            <ins title="nlp 2.00">V1</ins>
           </span>
         </span>
         <span id="w_472" class="ocr_word" title="bbox 1309 2984 1367 3027">
@@ -2505,12 +2506,6 @@
         <span id="w_477" class="ocr_word" title="bbox 1867 2993 1946 3026" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">γοῦν</ins>
-          </span>
-        </span>
-        <span id="w_478" class="ocr_word" title="bbox 1968 2982 1994 3015">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">T</ins>
-            <del title="nlp 0.90">T</del>
           </span>
         </span>
       </span>
@@ -2795,9 +2790,14 @@
             <ins class="alt" title="nlp 1.00">καθυποβάλλωμεν</ins>
           </span>
         </span>
-        <span id="w_530" class="ocr_word" title="bbox 1120 3219 1163 3252">
+        <span id="w_530_0" class="ocr_word" title="bbox 1120 3219 1163 3252">
           <span class="alternatives">
-            <ins title="nlp 2.00">T 2</ins>
+            <ins class="alt" title="nlp 2.00">T2</ins>
+          </span>
+        </span>
+        <span id="w_530_1" class="ocr_word" title="bbox 1120 3219 1163 3252">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_531" class="ocr_word" title="bbox 1353 3219 1395 3254">
@@ -2831,11 +2831,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">suppl.</ins>
             <del title="nlp 0.90">suppl.</del>
-          </span>
-        </span>
-        <span id="w_537" class="ocr_word" title="bbox 2064 3215 2109 3249">
-          <span class="alternatives">
-            <ins title="nlp 2.00">V 2</ins>
           </span>
         </span>
       </span>
