--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0305.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0305.html
@@ -665,9 +665,14 @@
             <ins title="nlp 2.00">δίσημος</ins>
           </span>
         </span>
-        <span id="w_117" class="ocr_word" title="bbox 254 1835 383 1878" lang="grc">
+        <span id="w_117_0" class="ocr_word" title="bbox 254 1835 383 1878">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">(μακρὰ</ins>
+          </span>
+        </span>
+        <span id="w_117_1" class="ocr_word" title="bbox 254 1835 383 1878">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_118" class="ocr_word" title="bbox 409 1833 559 1879" lang="grc">
@@ -678,11 +683,6 @@
         <span id="w_119" class="ocr_word" title="bbox 587 1836 757 1880" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τεσσάρων</ins>
-          </span>
-        </span>
-        <span id="w_120" class="ocr_word" title="bbox 784 1837 928 1880" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">χρόνων)</ins>
           </span>
         </span>
       </span>
@@ -932,12 +932,12 @@
       <span class="ocr_line" title="bbox 50 2709 920 2762">
         <span id="w_166" class="ocr_word" title="bbox 50 2709 327 2760">
           <span class="alternatives">
-            <ins title="nlp 2.00">*δρομικότης</ins>
+            <ins title="nlp 2.00">δρομικότης</ins>
           </span>
         </span>
         <span id="w_167" class="ocr_word" title="bbox 358 2716 435 2760" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">(οὐχ</ins>
+            <ins class="alt" title="nlp 2.00">οὐχ</ins>
           </span>
         </span>
         <span id="w_168" class="ocr_word" title="bbox 463 2718 612 2762" lang="grc">
@@ -2407,9 +2407,14 @@
             <ins class="alt" title="nlp 1.00">εἶναι</ins>
           </span>
         </span>
-        <span id="w_435" class="ocr_word" title="bbox 1534 3184 1687 3223" lang="grc">
+        <span id="w_435_0" class="ocr_word" title="bbox 1534 3184 1687 3223">
           <span class="alternatives">
-            <ins title="nlp 2.00">(φυσικὸς θάνατος),</ins>
+            <ins class="alt" title="nlp 2.00">(φυσικὸς</ins>
+          </span>
+        </span>
+        <span id="w_435_1" class="ocr_word" title="bbox 1534 3184 1687 3223">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00">θάνατος),</ins>
           </span>
         </span>
       </span>
