--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0368.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0368.html
@@ -765,7 +765,7 @@
         </span>
         <span id="w_144" class="ocr_word" title="bbox 653 1030 793 1083" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ταῦτα</ins>
+            <ins title="nlp 2.00">(ταῦτα</ins>
           </span>
         </span>
         <span id="w_145" class="ocr_word" title="bbox 828 1045 899 1069" lang="grc">
@@ -1672,7 +1672,7 @@
         </span>
         <span id="w_322" class="ocr_word" title="bbox 2128 2142 2202 2179">
           <span class="alternatives">
-            <ins title="nlp 2.00">132ν</ins>
+            <ins title="nlp 2.00">ν</ins>
           </span>
         </span>
       </span>
@@ -1774,9 +1774,14 @@
             <ins class="alt" title="nlp 1.00">ἄνθρωπον</ins>
           </span>
         </span>
-        <span id="w_342" class="ocr_word" title="bbox 1438 2276 1537 2332">
+        <span id="w_342_0" class="ocr_word" title="bbox 1438 2276 1537 2332">
           <span class="alternatives">
-            <ins title="nlp 2.00">&amp;#x003C;καὶ&amp;#x003E;</ins>
+            <ins class="alt" title="nlp 2.00">&lt;καὶ&gt;</ins>
+          </span>
+        </span>
+        <span id="w_342_1" class="ocr_word" title="bbox 1438 2276 1537 2332">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_343" class="ocr_word" title="bbox 1569 2293 1622 2332" lang="grc">
@@ -1792,11 +1797,6 @@
         <span id="w_345" class="ocr_word" title="bbox 1781 2279 1945 2330" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">λογικόν.</ins>
-          </span>
-        </span>
-        <span id="w_346" class="ocr_word" title="bbox 2008 2276 2145 2330" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">συμβλεβηχὸς</ins>
           </span>
         </span>
       </span>
@@ -2269,7 +2269,7 @@
         </span>
         <span id="w_436" class="ocr_word" title="bbox 946 2823 1020 2863" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τὴν</ins>
+            <ins title="nlp 2.00">(τὴν</ins>
           </span>
         </span>
         <span id="w_437" class="ocr_word" title="bbox 1047 2823 1081 2852">
