--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0451.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0451.html
@@ -100,12 +100,12 @@
       <span class="ocr_line" title="bbox 823 1299 1129 1357">
         <span id="w_16" class="ocr_word" title="bbox 823 1301 1018 1357">
           <span class="alternatives">
-            <ins title="nlp 2.00">&lt;Πρᾶξις</ins>
+            <ins title="nlp 2.00">Πρᾶξις</ins>
           </span>
         </span>
         <span id="w_17" class="ocr_word" title="bbox 1049 1299 1129 1355">
           <span class="alternatives">
-            <ins title="nlp 2.00">α'&gt;.</ins>
+            <ins title="nlp 2.00">.</ins>
           </span>
         </span>
       </span>
