--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0277.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0277.html
@@ -97,9 +97,14 @@
             <ins class="alt" title="nlp 1.00">δὲ</ins>
           </span>
         </span>
-        <span id="w_16" class="ocr_word" title="bbox 1187 214 1442 240" lang="grc">
+        <span id="w_16_0" class="ocr_word" title="bbox 1187 214 1442 240">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἀντιχείμενον</ins>
+            <ins class="alt" title="nlp 2.00">ἀντικείμενον</ins>
+          </span>
+        </span>
+        <span id="w_16_1" class="ocr_word" title="bbox 1187 214 1442 240">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_17" class="ocr_word" title="bbox 1489 204 1536 253" lang="grc">
@@ -107,16 +112,16 @@
             <ins class="alt" title="nlp 1.00">τῇ</ins>
           </span>
         </span>
-        <span id="w_18" class="ocr_word" title="bbox 1580 202 1803 254" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δικαιοσύνῃ</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 132 267 1802 321">
-        <span id="w_19" class="ocr_word" title="bbox 132 268 442 308" lang="grc">
+        <span id="w_19_0" class="ocr_word" title="bbox 132 268 442 308">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἀχατονόμαστόν</ins>
+            <ins class="alt" title="nlp 2.00">ἀκατονόμαστόν</ins>
+          </span>
+        </span>
+        <span id="w_19_1" class="ocr_word" title="bbox 132 268 442 308">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_20" class="ocr_word" title="bbox 474 267 565 319" lang="grc">
@@ -149,19 +154,14 @@
             <ins class="alt" title="nlp 1.00">ἕξεις</ins>
           </span>
         </span>
-        <span id="w_26" class="ocr_word" title="bbox 1081 282 1340 321" lang="grc">
+        <span id="w_26_0" class="ocr_word" title="bbox 1081 282 1340 321">
           <span class="alternatives">
-            <ins title="nlp 2.00">στρερητιχοῖς</ins>
+            <ins class="alt" title="nlp 2.00">στρερητικοῖς</ins>
           </span>
         </span>
-        <span id="w_27" class="ocr_word" title="bbox 1371 283 1554 320" lang="grc">
+        <span id="w_26_1" class="ocr_word" title="bbox 1081 282 1340 321">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὀνόμασιν</ins>
-          </span>
-        </span>
-        <span id="w_28" class="ocr_word" title="bbox 1587 271 1802 320" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὀνομάζειν,</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -320,9 +320,14 @@
             <ins class="alt" title="nlp 1.00">ὄντα,</ins>
           </span>
         </span>
-        <span id="w_59" class="ocr_word" title="bbox 1066 486 1300 526" lang="grc">
+        <span id="w_59_0" class="ocr_word" title="bbox 1066 486 1300 526">
           <span class="alternatives">
-            <ins title="nlp 2.00">στερητιχοῖς</ins>
+            <ins class="alt" title="nlp 2.00">στερητικοῖς</ins>
+          </span>
+        </span>
+        <span id="w_59_1" class="ocr_word" title="bbox 1066 486 1300 526">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_60" class="ocr_word" title="bbox 1337 487 1519 527" lang="grc">
@@ -333,11 +338,6 @@
         <span id="w_61" class="ocr_word" title="bbox 1559 489 1628 514" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">οὐκ</ins>
-          </span>
-        </span>
-        <span id="w_62" class="ocr_word" title="bbox 1668 474 1805 513" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">ὀνομάζοναι,</ins>
           </span>
         </span>
       </span>
@@ -987,9 +987,14 @@
             <ins class="alt" title="nlp 1.00">μιᾶς</ins>
           </span>
         </span>
-        <span id="w_190" class="ocr_word" title="bbox 1166 1228 1229 1267" lang="grc">
+        <span id="w_190_0" class="ocr_word" title="bbox 1166 1228 1229 1267">
           <span class="alternatives">
-            <ins title="nlp 2.00">χαὶ</ins>
+            <ins class="alt" title="nlp 2.00">καὶ</ins>
+          </span>
+        </span>
+        <span id="w_190_1" class="ocr_word" title="bbox 1166 1228 1229 1267">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_191" class="ocr_word" title="bbox 1267 1243 1332 1280">
@@ -1010,11 +1015,6 @@
         <span id="w_194" class="ocr_word" title="bbox 1667 1228 1701 1267" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">οἱ</ins>
-          </span>
-        </span>
-        <span id="w_195" class="ocr_word" title="bbox 1735 1243 1802 1280" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">μὲν</ins>
           </span>
         </span>
       </span>
@@ -1165,7 +1165,7 @@
         </span>
         <span id="w_225_0" class="ocr_word" title="bbox 875 1434 955 1489">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">&amp;#x003C;οὐ&amp;#x003Ε;</ins>
+            <ins class="alt" title="nlp 2.00">Ε;</ins>
           </span>
         </span>
         <span id="w_225_1" class="ocr_word" title="bbox 875 1434 955 1489">
@@ -1376,7 +1376,7 @@
         </span>
         <span id="w_266" class="ocr_word" title="bbox 1269 1641 1399 1693" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(οὐδὲν</ins>
+            <ins title="nlp 2.00">οὐδὲν</ins>
           </span>
         </span>
         <span id="w_267" class="ocr_word" title="bbox 1430 1641 1501 1694" lang="grc">
@@ -1590,9 +1590,14 @@
             <ins class="alt" title="nlp 1.00">τὸ</ins>
           </span>
         </span>
-        <span id="w_308" class="ocr_word" title="bbox 1145 1849 1446 1900" lang="grc">
+        <span id="w_308_0" class="ocr_word" title="bbox 1145 1849 1446 1900">
           <span class="alternatives">
-            <ins title="nlp 2.00">λελευχωμένον,</ins>
+            <ins class="alt" title="nlp 2.00">λελευκωμένον,</ins>
+          </span>
+        </span>
+        <span id="w_308_1" class="ocr_word" title="bbox 1145 1849 1446 1900">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_309" class="ocr_word" title="bbox 1478 1849 1614 1887" lang="grc">
@@ -1603,11 +1608,6 @@
         <span id="w_310" class="ocr_word" title="bbox 1647 1848 1690 1887" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">δέ</ins>
-          </span>
-        </span>
-        <span id="w_311" class="ocr_word" title="bbox 1721 1860 1802 1887" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐστι</ins>
           </span>
         </span>
       </span>
@@ -2147,19 +2147,19 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 133 2607 496 2660">
-        <span id="w_416" class="ocr_word" title="bbox 133 2607 193 2647">
+        <span id="w_416_0" class="ocr_word" title="bbox 133 2607 193 2647">
           <span class="alternatives">
-            <ins title="nlp 2.00">χαὶ</ins>
+            <ins class="alt" title="nlp 2.00">καὶ</ins>
+          </span>
+        </span>
+        <span id="w_416_1" class="ocr_word" title="bbox 133 2607 193 2647">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_417" class="ocr_word" title="bbox 224 2608 285 2647">
           <span class="alternatives">
             <ins title="nlp 2.00">ἐπὶ</ins>
-          </span>
-        </span>
-        <span id="w_418" class="ocr_word" title="bbox 317 2621 496 2660">
-          <span class="alternatives">
-            <ins title="nlp 2.00">σώματος</ins>
           </span>
         </span>
       </span>
@@ -2174,9 +2174,14 @@
             <ins class="alt" title="nlp 2.00">γὰρ</ins>
           </span>
         </span>
-        <span id="w_421_0" class="ocr_word" title="bbox 723 2677 785 2717">
+        <span id="w_421_0_0" class="ocr_word" title="bbox 723 2677 785 2717">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">χαὶ</ins>
+            <ins class="alt" title="nlp 2.00">καὶ</ins>
+          </span>
+        </span>
+        <span id="w_421_0_1" class="ocr_word" title="bbox 723 2677 785 2717">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_421_1" class="ocr_word" title="bbox 723 2677 785 2717">
@@ -2194,23 +2199,23 @@
             <ins class="alt" title="nlp 2.00">πατρὶ</ins>
           </span>
         </span>
-        <span id="w_425" class="ocr_word" title="bbox 1287 2674 1478 2721" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">πέλονται,</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 132 2745 192 2784">
-        <span id="w_426" class="ocr_word" title="bbox 132 2745 192 2784" lang="grc">
+        <span id="w_426_0" class="ocr_word" title="bbox 132 2745 192 2784">
           <span class="alternatives">
-            <ins title="nlp 2.00">χαὶ</ins>
+            <ins class="alt" title="nlp 2.00">καἲ</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 466 2812 1457 2867">
-        <span id="w_427" class="ocr_word" title="bbox 466 2828 656 2855">
+        <span id="w_427_0" class="ocr_word" title="bbox 466 2828 656 2855">
           <span class="alternatives">
-            <ins title="nlp 2.00">τίχτουσιν</ins>
+            <ins class="alt" title="nlp 2.00">τίκτουσιν</ins>
+          </span>
+        </span>
+        <span id="w_427_1" class="ocr_word" title="bbox 466 2828 656 2855">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_428" class="ocr_word" title="bbox 688 2829 730 2854">
@@ -2218,24 +2223,19 @@
             <ins title="nlp 2.00">δὲ</ins>
           </span>
         </span>
-        <span id="w_429" class="ocr_word" title="bbox 760 2816 935 2867">
+        <span id="w_429_0" class="ocr_word" title="bbox 760 2816 935 2867">
           <span class="alternatives">
-            <ins title="nlp 2.00">γυναῖχες</ins>
+            <ins class="alt" title="nlp 2.00">γυναῖκες</ins>
           </span>
         </span>
-        <span id="w_430" class="ocr_word" title="bbox 967 2812 1119 2853">
+        <span id="w_429_1" class="ocr_word" title="bbox 760 2816 935 2867">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἐοιχότα</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
-        <span id="w_431" class="ocr_word" title="bbox 1150 2828 1263 2853" lang="grc">
+        <span id="w_430_0" class="ocr_word" title="bbox 967 2812 1119 2853">
           <span class="alternatives">
-            <ins title="nlp 2.00">τέχνα</ins>
-          </span>
-        </span>
-        <span id="w_432" class="ocr_word" title="bbox 1293 2825 1457 2866">
-          <span class="alternatives">
-            <ins title="nlp 2.00">γονεῦσι.</ins>
+            <ins class="alt" title="nlp 2.00">ἐοικότα</ins>
           </span>
         </span>
       </span>
@@ -2261,9 +2261,14 @@
             <ins class="alt" title="nlp 1.00">5</ins>
           </span>
         </span>
-        <span id="w_437" class="ocr_word" title="bbox 432 3000 614 3033">
+        <span id="w_437_0" class="ocr_word" title="bbox 432 3000 614 3033">
           <span class="alternatives">
-            <ins title="nlp 2.00">χουφώτης</ins>
+            <ins class="alt" title="nlp 2.00">κουφώτης</ins>
+          </span>
+        </span>
+        <span id="w_437_1" class="ocr_word" title="bbox 432 3000 614 3033">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_438" class="ocr_word" title="bbox 641 2987 666 3020">
@@ -2313,11 +2318,6 @@
         <span id="w_446" class="ocr_word" title="bbox 1670 2979 1708 3013">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">15</ins>
-          </span>
-        </span>
-        <span id="w_447" class="ocr_word" title="bbox 1735 2978 1869 3025">
-          <span class="alternatives">
-            <ins title="nlp 2.00">θερμαίνονται</ins>
           </span>
         </span>
       </span>
@@ -2459,9 +2459,14 @@
             <ins class="alt" title="nlp 1.00">276</ins>
           </span>
         </span>
-        <span id="w_473" class="ocr_word" title="bbox 473 3162 544 3207" lang="grc">
+        <span id="w_473_0" class="ocr_word" title="bbox 473 3162 544 3207">
           <span class="alternatives">
-            <ins title="nlp 2.00">χαὶ]</ins>
+            <ins class="alt" title="nlp 2.00">καὶ]</ins>
+          </span>
+        </span>
+        <span id="w_473_1" class="ocr_word" title="bbox 473 3162 544 3207">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_474" class="ocr_word" title="bbox 572 3175 624 3196" lang="grc">
@@ -2521,11 +2526,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">d.</ins>
             <del title="nlp 0.90">d.</del>
-          </span>
-        </span>
-        <span id="w_485" class="ocr_word" title="bbox 1785 3153 1852 3188">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">235</ins>
           </span>
         </span>
       </span>
