--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0411.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0411.html
@@ -155,16 +155,11 @@
         </span>
         <span id="w_27" class="ocr_word" title="bbox 1770 308 1877 346" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἀγνο-</ins>
+            <ins title="nlp 2.00">ἀνγοοῦντες</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 197 355 1875 413">
-        <span id="w_28" class="ocr_word" title="bbox 197 355 326 395" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">οῦντες</ins>
-          </span>
-        </span>
         <span id="w_29" class="ocr_word" title="bbox 357 368 403 392" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">ἁ</ins>
@@ -1724,7 +1719,7 @@
         </span>
         <span id="w_332" class="ocr_word" title="bbox 579 2150 757 2201" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἕκαστος</ins>
+            <ins title="nlp 2.00">(ἕκαστος</ins>
           </span>
         </span>
         <span id="w_333" class="ocr_word" title="bbox 794 2151 865 2206" lang="grc">
@@ -2528,8 +2523,7 @@
         </span>
         <span id="w_484" class="ocr_word" title="bbox 1804 3027 1876 3059">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">TV</ins>
-            <del title="nlp 0.90">TV</del>
+            <ins title="nlp 2.00">TV1</ins>
           </span>
         </span>
       </span>
