--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0306.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0306.html
@@ -50,7 +50,7 @@
         </span>
         <span id="w_6" class="ocr_word" title="bbox 626 214 869 258" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(προαιρετικὸς</ins>
+            <ins title="nlp 2.00">προαιρετικὸς</ins>
           </span>
         </span>
         <span id="w_7" class="ocr_word" title="bbox 906 209 1076 254" lang="grc">
@@ -1000,7 +1000,7 @@
         </span>
         <span id="w_178" class="ocr_word" title="bbox 788 2738 986 2782" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὁμώνυμα)</ins>
+            <ins title="nlp 2.00">(ὁμώνυμα)</ins>
           </span>
         </span>
         <span id="w_179" class="ocr_word" title="bbox 1015 2738 1115 2780">
@@ -1536,7 +1536,7 @@
         </span>
         <span id="w_276" class="ocr_word" title="bbox 1521 857 1600 903" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">οὐχ</ins>
+            <ins title="nlp 2.00">(οὐχ</ins>
           </span>
         </span>
         <span id="w_277" class="ocr_word" title="bbox 1626 858 1776 902" lang="grc">
@@ -1903,7 +1903,7 @@
         </span>
         <span id="w_341" class="ocr_word" title="bbox 1511 1857 1697 1904" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">πυρρίχιος</ins>
+            <ins title="nlp 2.00">(πυρρίχιος</ins>
           </span>
         </span>
         <span id="w_342" class="ocr_word" title="bbox 1724 1856 1875 1903" lang="grc">
@@ -2214,7 +2214,7 @@
         </span>
         <span id="w_397" class="ocr_word" title="bbox 2014 2560 2180 2605">
           <span class="alternatives">
-            <ins title="nlp 2.00">(πρᾶγμα),</ins>
+            <ins title="nlp 2.00">πρᾶγμα),</ins>
           </span>
         </span>
       </span>
