--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0452.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0452.html
@@ -1746,8 +1746,7 @@
       <span class="ocr_line" title="bbox 409 2223 2095 2280">
         <span id="w_337" class="ocr_word" title="bbox 409 2246 442 2280">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">p.</ins>
-            <del title="nlp 0.90">p.</del>
+            <ins title="nlp 2.00">p.</ins>
           </span>
         </span>
         <span id="w_338" class="ocr_word" title="bbox 464 2235 518 2276">
@@ -2209,9 +2208,14 @@
             <ins class="alt" title="nlp 1.00">ἐστὶ</ins>
           </span>
         </span>
-        <span id="w_418" class="ocr_word" title="bbox 648 2683 785 2726" lang="grc">
+        <span id="w_418_0" class="ocr_word" title="bbox 648 2683 785 2726">
           <span class="alternatives">
-            <ins title="nlp 2.00">(πραγμ.</ins>
+            <ins class="alt" title="nlp 2.00">(πραγμ.</ins>
+          </span>
+        </span>
+        <span id="w_418_1" class="ocr_word" title="bbox 648 2683 785 2726">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_419" class="ocr_word" title="bbox 812 2682 893 2721">
@@ -2267,11 +2271,6 @@
           <span class="alternatives">
             <ins class="alt" title="nlp 0.10">add.</ins>
             <del title="nlp 0.90">add.</del>
-          </span>
-        </span>
-        <span id="w_429" class="ocr_word" title="bbox 2097 2677 2164 2711" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">οἷον</ins>
           </span>
         </span>
       </span>
