--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0412.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0412.html
@@ -88,7 +88,7 @@
         </span>
         <span id="w_14" class="ocr_word" title="bbox 1523 211 1604 263" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">καὶ</ins>
+            <ins title="nlp 2.00">(καὶ</ins>
           </span>
         </span>
         <span id="w_15" class="ocr_word" title="bbox 1627 212 1871 268" lang="grc">
@@ -291,7 +291,7 @@
         </span>
         <span id="w_53" class="ocr_word" title="bbox 631 490 714 542" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">διὰ</ins>
+            <ins title="nlp 2.00">(διὰ</ins>
           </span>
         </span>
         <span id="w_54" class="ocr_word" title="bbox 745 505 816 544" lang="grc">
@@ -1593,7 +1593,7 @@
         </span>
         <span id="w_308" class="ocr_word" title="bbox 1886 1954 2017 2009" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">τοῦτο</ins>
+            <ins title="nlp 2.00">(τοῦτο</ins>
           </span>
         </span>
         <span id="w_309" class="ocr_word" title="bbox 2050 1956 2092 1995" lang="grc">
@@ -2458,8 +2458,7 @@
         </span>
         <span id="w_471" class="ocr_word" title="bbox 910 2795 939 2829">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Y</ins>
-            <del title="nlp 0.90">Y</del>
+            <ins title="nlp 2.00">V</ins>
           </span>
         </span>
         <span id="w_472" class="ocr_word" title="bbox 1154 2797 1197 2831">
