--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0276.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0276.html
@@ -77,9 +77,14 @@
             <ins class="alt" title="nlp 1.00">τερῶ</ins>
           </span>
         </span>
-        <span id="w_12" class="ocr_word" title="bbox 596 261 766 314" lang="grc">
+        <span id="w_12_0" class="ocr_word" title="bbox 596 261 766 314">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἐδείχδη.</ins>
+            <ins class="alt" title="nlp 2.00">ἐδείχδη.</ins>
+          </span>
+        </span>
+        <span id="w_12_1" class="ocr_word" title="bbox 596 261 766 314">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_13" class="ocr_word" title="bbox 829 260 848 299" lang="grc">
@@ -120,11 +125,6 @@
         <span id="w_20" class="ocr_word" title="bbox 1945 260 2061 314" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">φησὶν</ins>
-          </span>
-        </span>
-        <span id="w_21" class="ocr_word" title="bbox 2093 275 2151 299" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὅτι</ins>
           </span>
         </span>
       </span>
@@ -236,9 +236,9 @@
             <ins class="alt" title="nlp 1.00">ἡ</ins>
           </span>
         </span>
-        <span id="w_43" class="ocr_word" title="bbox 2012 412 2149 438" lang="grc">
+        <span id="w_43_0" class="ocr_word" title="bbox 2012 412 2149 438">
           <span class="alternatives">
-            <ins title="nlp 2.00">διχαιοσύνη</ins>
+            <ins class="alt" title="nlp 2.00">δικαιοσύνη</ins>
           </span>
         </span>
       </span>
@@ -389,7 +389,7 @@
         </span>
         <span id="w_73_0" class="ocr_word" title="bbox 1278 601 1395 657">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">&amp;#x003C;οἷον&amp;#x003Ε;</ins>
+            <ins class="alt" title="nlp 2.00">Ε;</ins>
           </span>
         </span>
         <span id="w_73_1" class="ocr_word" title="bbox 1278 601 1395 657">
@@ -560,7 +560,7 @@
         </span>
         <span id="w_106" class="ocr_word" title="bbox 462 812 646 865" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(γίνονται</ins>
+            <ins title="nlp 2.00">γίνονται</ins>
           </span>
         </span>
         <span id="w_107" class="ocr_word" title="bbox 692 827 764 864" lang="grc">
@@ -610,14 +610,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 465 880 933 936">
-        <span id="w_117" class="ocr_word" title="bbox 465 881 630 936" lang="grc">
+        <span id="w_117_0" class="ocr_word" title="bbox 465 881 630 936">
           <span class="alternatives">
-            <ins title="nlp 2.00">συμβεβηχὸς</ins>
+            <ins class="alt" title="nlp 2.00">συμβεβηκὸς</ins>
           </span>
         </span>
-        <span id="w_118" class="ocr_word" title="bbox 660 880 933 935" lang="grc">
+        <span id="w_117_1" class="ocr_word" title="bbox 465 881 630 936">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">συμβεβηκότι.</ins>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
@@ -985,9 +985,14 @@
             <ins class="alt" title="nlp 1.00">περὶ</ins>
           </span>
         </span>
-        <span id="w_189" class="ocr_word" title="bbox 1352 1507 1624 1532" lang="grc">
+        <span id="w_189_0" class="ocr_word" title="bbox 1352 1507 1624 1532">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἀντιχειμένων</ins>
+            <ins class="alt" title="nlp 2.00">ἀντικειμένων</ins>
+          </span>
+        </span>
+        <span id="w_189_1" class="ocr_word" title="bbox 1352 1507 1624 1532">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_190" class="ocr_word" title="bbox 1657 1495 1782 1547" lang="grc">
@@ -1003,11 +1008,6 @@
         <span id="w_192" class="ocr_word" title="bbox 1920 1494 1965 1533" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">τὰ</ins>
-          </span>
-        </span>
-        <span id="w_193" class="ocr_word" title="bbox 1997 1508 2147 1534" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐναντία</ins>
           </span>
         </span>
       </span>
@@ -2568,9 +2568,9 @@
             <ins class="alt" title="nlp 1.00">32</ins>
           </span>
         </span>
-        <span id="w_492" class="ocr_word" title="bbox 2149 3105 2225 3163">
+        <span id="w_492_0" class="ocr_word" title="bbox 2149 3105 2225 3163">
           <span class="alternatives">
-            <ins title="nlp 2.00">οὐχ</ins>
+            <ins class="alt" title="nlp 2.00">οὐκ</ins>
           </span>
         </span>
       </span>
