--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0307.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0307.html
@@ -578,8 +578,7 @@
         </span>
         <span id="w_101" class="ocr_word" title="bbox 270 1779 378 1823">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">iogice</ins>
-            <del title="nlp 0.90">iogice</del>
+            <ins title="nlp 2.00">logice</ins>
           </span>
         </span>
         <span id="w_102" class="ocr_word" title="bbox 406 1778 484 1819">
@@ -1507,7 +1506,7 @@
         </span>
         <span id="w_271" class="ocr_word" title="bbox 1304 1366 1551 1412" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(Δημοσθένους</ins>
+            <ins title="nlp 2.00">Δημοσθένους</ins>
           </span>
         </span>
         <span id="w_272" class="ocr_word" title="bbox 1577 1367 1686 1412" lang="grc">
@@ -1574,7 +1573,7 @@
         </span>
         <span id="w_283" class="ocr_word" title="bbox 1545 1544 1662 1590" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(χιτών?)</ins>
+            <ins title="nlp 2.00">χιτών?)</ins>
           </span>
         </span>
         <span id="w_284" class="ocr_word" title="bbox 1729 1543 1829 1586">
@@ -1731,7 +1730,7 @@
       <span class="ocr_line" title="bbox 1012 2072 1524 2118">
         <span id="w_310" class="ocr_word" title="bbox 1012 2072 1396 2118" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">*ἑτεροϋπόστατος</ins>
+            <ins title="nlp 2.00">ἑτεροϋπόστατος</ins>
           </span>
         </span>
         <span id="w_311" class="ocr_word" title="bbox 1425 2072 1524 2114">
@@ -1952,7 +1951,7 @@
       <span class="ocr_line" title="bbox 1083 2716 1468 2759">
         <span id="w_349" class="ocr_word" title="bbox 1083 2718 1157 2757" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">22,1 εὐθέως 87,15</ins>
+            <ins title="nlp 2.00">εὐθέως 87,15</ins>
           </span>
         </span>
       </span>
