--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0370.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0370.html
@@ -2506,8 +2506,7 @@
         </span>
         <span id="w_484" class="ocr_word" title="bbox 1093 2987 1123 3019">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">Y</ins>
-            <del title="nlp 0.90">Y</del>
+            <ins title="nlp 2.00">V</ins>
           </span>
         </span>
         <span id="w_485" class="ocr_word" title="bbox 1249 2987 1473 3032" lang="grc">
