--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0413.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0413.html
@@ -1962,9 +1962,14 @@
             <del title="nlp 0.90">Gr.</del>
           </span>
         </span>
-        <span id="w_373" class="ocr_word" title="bbox 530 2856 577 2889">
+        <span id="w_373_0" class="ocr_word" title="bbox 530 2856 577 2889">
           <span class="alternatives">
-            <ins title="nlp 2.00">ΙΙ 3</ins>
+            <ins class="alt" title="nlp 2.00">II3</ins>
+          </span>
+        </span>
+        <span id="w_373_1" class="ocr_word" title="bbox 530 2856 577 2889">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_374" class="ocr_word" title="bbox 608 2868 641 2900">
@@ -2008,11 +2013,6 @@
         <span id="w_381" class="ocr_word" title="bbox 1762 2860 1811 2892" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">γρ.</ins>
-          </span>
-        </span>
-        <span id="w_382" class="ocr_word" title="bbox 1844 2845 1919 2880" lang="grc">
-          <span class="alternatives">
-            <ins title="nlp 2.00">θεολογικὸν)</ins>
           </span>
         </span>
       </span>
@@ -2156,7 +2156,7 @@
         </span>
         <span id="w_409" class="ocr_word" title="bbox 183 3044 302 3077" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">[ερὶ—καταγίνεται</ins>
+            <ins title="nlp 2.00">ερὶ—καταγίνεται</ins>
           </span>
         </span>
         <span id="w_410" class="ocr_word" title="bbox 543 3042 608 3065">
@@ -2243,9 +2243,14 @@
             <del title="nlp 0.90">Gr.</del>
           </span>
         </span>
-        <span id="w_425" class="ocr_word" title="bbox 456 3090 522 3124">
+        <span id="w_425_0" class="ocr_word" title="bbox 456 3090 522 3124">
           <span class="alternatives">
-            <ins title="nlp 2.00">ΙΙΙ 3</ins>
+            <ins class="alt" title="nlp 2.00">III3</ins>
+          </span>
+        </span>
+        <span id="w_425_1" class="ocr_word" title="bbox 456 3090 522 3124">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_426" class="ocr_word" title="bbox 555 3101 586 3134">
@@ -2295,11 +2300,6 @@
             <ins title="nlp 2.00">γὰρ—θεολ.</ins>
           </span>
         </span>
-        <span id="w_435" class="ocr_word" title="bbox 1850 3080 1922 3122">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">(27)</ins>
-          </span>
-        </span>
       </span>
       <span class="ocr_line" title="bbox 106 3140 1923 3193">
         <span id="w_436" class="ocr_word" title="bbox 106 3148 141 3180">
@@ -2320,9 +2320,14 @@
             <del title="nlp 0.90">suppl.</del>
           </span>
         </span>
-        <span id="w_439" class="ocr_word" title="bbox 412 3150 458 3183">
+        <span id="w_439_0" class="ocr_word" title="bbox 412 3150 458 3183">
           <span class="alternatives">
-            <ins title="nlp 2.00">V 2</ins>
+            <ins class="alt" title="nlp 2.00">V2</ins>
+          </span>
+        </span>
+        <span id="w_439_1" class="ocr_word" title="bbox 412 3150 458 3183">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_440" class="ocr_word" title="bbox 609 3147 738 3186" lang="grc">
@@ -2375,12 +2380,6 @@
         <span id="w_449" class="ocr_word" title="bbox 1774 3140 1815 3173">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">26</ins>
-          </span>
-        </span>
-        <span id="w_450" class="ocr_word" title="bbox 1844 3142 1923 3183">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">post</ins>
-            <del title="nlp 0.90">post</del>
           </span>
         </span>
       </span>
