--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0308.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0308.html
@@ -168,7 +168,7 @@
       <span class="ocr_line" title="bbox 333 637 830 684">
         <span id="w_28" class="ocr_word" title="bbox 333 637 569 684" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">Zωγράφος 45,7 139,24</ins>
+            <ins title="nlp 2.00">ωγράφος 45,7 139,24</ins>
           </span>
         </span>
       </span>
@@ -402,7 +402,7 @@
       <span class="ocr_line" title="bbox 327 1459 1212 1508">
         <span id="w_71" class="ocr_word" title="bbox 327 1459 386 1495" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(??)Η.</ins>
+            <ins title="nlp 2.00">Η.</ins>
           </span>
         </span>
         <span id="w_72" class="ocr_word" title="bbox 439 1461 562 1507" lang="grc">
@@ -454,7 +454,7 @@
       <span class="ocr_line" title="bbox 406 1520 1088 1567">
         <span id="w_82" class="ocr_word" title="bbox 594 1520 716 1567" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(ἀρχὴν</ins>
+            <ins title="nlp 2.00">ἀρχὴν</ins>
           </span>
         </span>
         <span id="w_83" class="ocr_word" title="bbox 742 1521 935 1563" lang="grc">
@@ -1149,7 +1149,7 @@
       <span class="ocr_line" title="bbox 1358 577 2166 625">
         <span id="w_209" class="ocr_word" title="bbox 1358 579 1408 621" lang="grc">
           <span class="alternatives">
-            <ins title="nlp 2.00">(οἱ</ins>
+            <ins title="nlp 2.00">οἱ</ins>
           </span>
         </span>
         <span id="w_210" class="ocr_word" title="bbox 1433 577 1582 613" lang="grc">
@@ -2049,9 +2049,14 @@
         </span>
       </span>
       <span class="ocr_line" title="bbox 1355 2523 2157 2569">
-        <span id="w_378" class="ocr_word" title="bbox 1492 2524 1613 2569" lang="grc">
+        <span id="w_378_0" class="ocr_word" title="bbox 1492 2524 1613 2569">
           <span class="alternatives">
-            <ins title="nlp 2.00">(μέρος</ins>
+            <ins class="alt" title="nlp 2.00">(μέρος</ins>
+          </span>
+        </span>
+        <span id="w_378_1" class="ocr_word" title="bbox 1492 2524 1613 2569">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_379" class="ocr_word" title="bbox 1654 2527 1712 2568" lang="grc">
@@ -2062,12 +2067,6 @@
         <span id="w_380" class="ocr_word" title="bbox 2005 2524 2089 2565">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">26,7</ins>
-          </span>
-        </span>
-        <span id="w_381" class="ocr_word" title="bbox 2110 2534 2157 2567">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">sq.</ins>
-            <del title="nlp 0.90">sq.</del>
           </span>
         </span>
       </span>
