--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0453.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0453.html
@@ -88,9 +88,14 @@
             <ins class="alt" title="nlp 1.00">εἶδος</ins>
           </span>
         </span>
-        <span id="w_13" class="ocr_word" title="bbox 698 221 773 262" lang="grc">
+        <span id="w_13_0" class="ocr_word" title="bbox 698 221 773 262">
           <span class="alternatives">
-            <ins title="nlp 2.00">χαὶ</ins>
+            <ins class="alt" title="nlp 2.00">καὶ</ins>
+          </span>
+        </span>
+        <span id="w_13_1" class="ocr_word" title="bbox 698 221 773 262">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_14" class="ocr_word" title="bbox 805 237 844 261" lang="grc">
@@ -126,11 +131,6 @@
         <span id="w_20_0" class="ocr_word" title="bbox 1670 239 1716 266">
           <span class="alternatives">
             <ins class="alt" title="nlp 2.00">τε</ins>
-          </span>
-        </span>
-        <span id="w_20_1" class="ocr_word" title="bbox 1670 239 1716 266">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">τὴν</ins>
           </span>
         </span>
       </span>
@@ -400,16 +400,11 @@
         </span>
         <span id="w_72" class="ocr_word" title="bbox 1671 672 1828 714" lang="grc">
           <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">δηλωτι-</ins>
+            <ins title="nlp 2.00">δηλωτικός,</ins>
           </span>
         </span>
       </span>
       <span class="ocr_line" title="bbox 149 719 1827 781">
-        <span id="w_73" class="ocr_word" title="bbox 149 737 228 767" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">κός,</ins>
-          </span>
-        </span>
         <span id="w_74" class="ocr_word" title="bbox 268 737 347 761" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">οἷον</ins>
@@ -546,7 +541,7 @@
         </span>
         <span id="w_98_1" class="ocr_word" title="bbox 84 873 123 903">
           <span class="alternatives">
-            <ins class="alt" title="nlp 2.00">χαί</ins>
+            <ins title="nlp 2.00">καί</ins>
           </span>
         </span>
         <span id="w_99" class="ocr_word" title="bbox 261 860 474 913" lang="grc">
@@ -1709,9 +1704,14 @@
             <ins class="alt" title="nlp 1.00">30</ins>
           </span>
         </span>
-        <span id="w_327" class="ocr_word" title="bbox 148 2239 375 2295" lang="grc">
+        <span id="w_327_0" class="ocr_word" title="bbox 148 2239 375 2295">
           <span class="alternatives">
-            <ins title="nlp 2.00">Σωχράτης&gt;</ins>
+            <ins class="alt" title="nlp 2.00">Σωκράτης&amp;x003E;</ins>
+          </span>
+        </span>
+        <span id="w_327_1" class="ocr_word" title="bbox 148 2239 375 2295">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_328" class="ocr_word" title="bbox 405 2255 458 2284" lang="grc">
@@ -1757,11 +1757,6 @@
         <span id="w_336" class="ocr_word" title="bbox 1477 2236 1664 2289" lang="grc">
           <span class="alternatives">
             <ins class="alt" title="nlp 1.00">λέγονται,</ins>
-          </span>
-        </span>
-        <span id="w_337" class="ocr_word" title="bbox 1695 2250 1829 2290" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἐπειδὴ</ins>
           </span>
         </span>
       </span>
@@ -2440,9 +2435,14 @@
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_463" class="ocr_word" title="bbox 1174 2875 1278 2916" lang="grc">
+        <span id="w_463_0" class="ocr_word" title="bbox 1174 2875 1278 2916">
           <span class="alternatives">
-            <ins title="nlp 2.00">χαὶ</ins>
+            <ins class="alt" title="nlp 2.00">καὶ</ins>
+          </span>
+        </span>
+        <span id="w_463_1" class="ocr_word" title="bbox 1174 2875 1278 2916">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_464" class="ocr_word" title="bbox 1305 2873 1392 2907" lang="grc">
@@ -2469,11 +2469,6 @@
         <span id="w_468" class="ocr_word" title="bbox 1684 2870 1747 2902" lang="grc">
           <span class="alternatives">
             <ins title="nlp 2.00">εἴπ.</ins>
-          </span>
-        </span>
-        <span id="w_469" class="ocr_word" title="bbox 1774 2867 1899 2907" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ἔξωθεν</ins>
           </span>
         </span>
       </span>
@@ -2867,9 +2862,14 @@
             <ins class="alt" title="nlp 1.00">καὶ</ins>
           </span>
         </span>
-        <span id="w_541" class="ocr_word" title="bbox 717 3167 826 3211" lang="grc">
+        <span id="w_541_0" class="ocr_word" title="bbox 717 3167 826 3211">
           <span class="alternatives">
-            <ins title="nlp 2.00">ἀλχιβ.</ins>
+            <ins class="alt" title="nlp 2.00">ἀλκιβ.</ins>
+          </span>
+        </span>
+        <span id="w_541_1" class="ocr_word" title="bbox 717 3167 826 3211">
+          <span class="alternatives">
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
         <span id="w_542" class="ocr_word" title="bbox 846 3166 873 3199">
@@ -2905,21 +2905,14 @@
             <del title="nlp 0.90">(ante</del>
           </span>
         </span>
-        <span id="w_548" class="ocr_word" title="bbox 1621 3162 1711 3205" lang="grc">
+        <span id="w_548_0" class="ocr_word" title="bbox 1621 3162 1711 3205">
           <span class="alternatives">
-            <ins title="nlp 2.00">χεφ.)</ins>
+            <ins class="alt" title="nlp 2.00">κεφ.)</ins>
           </span>
         </span>
-        <span id="w_549" class="ocr_word" title="bbox 1738 3171 1804 3194">
+        <span id="w_548_1" class="ocr_word" title="bbox 1621 3162 1711 3205">
           <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">om.</ins>
-            <del title="nlp 0.90">om.</del>
-          </span>
-        </span>
-        <span id="w_550" class="ocr_word" title="bbox 1824 3160 1850 3192">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 0.10">V</ins>
-            <del title="nlp 0.90">V</del>
+            <ins class="alt" title="nlp 2.00"/>
           </span>
         </span>
       </span>
