--- a/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0371.html
+++ b/2013-07-01-03-39_commentariaina18pt13akaduoft_jp2_Philo_Gamera_34_full.book/p0371.html
@@ -1933,9 +1933,9 @@
             <ins class="alt" title="nlp 1.00">λογικὸν</ins>
           </span>
         </span>
-        <span id="w_375" class="ocr_word" title="bbox 1767 2587 1858 2640" lang="grc">
+        <span id="w_375_0" class="ocr_word" title="bbox 1767 2587 1858 2640">
           <span class="alternatives">
-            <ins title="nlp 2.00">θην-</ins>
+            <ins class="alt" title="nlp 2.00">θνηὅτι]</ins>
           </span>
         </span>
       </span>
@@ -1943,11 +1943,6 @@
         <span id="w_376" class="ocr_word" title="bbox 112 2775 130 2808">
           <span class="alternatives">
             <ins title="nlp 2.00">2</ins>
-          </span>
-        </span>
-        <span id="w_377" class="ocr_word" title="bbox 158 2775 221 2820" lang="grc">
-          <span class="alternatives">
-            <ins class="alt" title="nlp 1.00">ὅτι]</ins>
           </span>
         </span>
         <span id="w_378" class="ocr_word" title="bbox 249 2788 266 2809" lang="grc">
